src/test/deca/syntax/invalid/sansobjet/MinusInt.deca
//MinusInt.deca:5:14: mismatched input ';' expecting {STRING, '(', 'false', 'true', 'readint', 'readFloat', '-', '!', FLOAT, INT, IDENT, NEW, THIS, NULL}
//Description: test soustraction incorrecte
//Resultats: erreur ligne 5: pas de deuxieme terme a droite (sum_exp)
{
    int i = 1-;
}
